# transactions-chile

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml
src/transactions_chile/: bank_transactions.py  cli.py
tests/: test_bank_transactions.py  test_converter.py
transactions_chile/: __init__.py  bank_transactions.py  cli.py  converter.py
